# princeton

./: .gitignore  CLAUDE.md  LICENSE  README.md  onkos_pitch.pptx  plan.md
backend/: CLAUDE.md  app.py  app_agent.py  pyproject.toml  requirements.txt  vaccine.json
backend/Regeneron /: 11_outside_records_FAXED.txt  12_labs_longitudinal.csv  README.md
backend/data/: dla_alleles.json  vendors.json
backend/data/tcga_skcm/: cases.json  clinical.csv  demo_patient.txt  mutations.parquet
backend/data/tcga_skcm/cases/TCGA-3N-A9WC/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-3N-A9WD/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-BF-AAOX/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-BF-AAP1/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-BF-AAP2/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-BF-AAP4/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-D3-A2JF/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-D3-A3C7/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-D3-A3ML/: metadata.json  tumor.vcf
backend/data/tcga_skcm/cases/TCGA-D3-A3MR/: metadata.json  tumor.vcf
backend/sample_data/: braf_v600e.tsv  example.vcf  luna_tumor.vcf  tcga_skcm_demo.vcf
backend/scripts/: build_pubmed_rag.py  build_tcga_skcm_cases.py  fetch_tcga_skcm.py  generate_luna_pdf.py  scrape_regeneron_trials.py
backend/src/neoantigen/: cli.py  genes.py  models.py
backend/src/neoantigen/agent/: __init__.py  _llm.py  audit.py  emails.py  events.py  explain.py  gmail_auth.py  labs.py  melanoma_orchestrator.py  molecular.py  orchestrator.py  pathology.py  patient_orchestrator.py  structure.py  timeline.py  tools.py  vlm_pathology.py
backend/src/neoantigen/chat/: __init__.py  agent.py  k2_client.py  patient_guide_prompt.py  state.py  tools.py
backend/src/neoantigen/cohort/: __init__.py  demo_intake.py  funnel.py  survival.py  tcga.py  twins.py
backend/src/neoantigen/enrichment/: __init__.py  cancer_type.py  cbioportal.py  signatures.py  tmb.py
backend/src/neoantigen/io/: __init__.py  aggregator.py  demographics.py  pdf_extract.py
backend/src/neoantigen/nccn/: __init__.py  dynamic_walker.py  evidence.py  melanoma_v2024.py  railway.py  walker.py
backend/src/neoantigen/pipeline/: codon.py  construct.py  filters.py  parser.py  peptides.py  protein.py  runner.py  scoring.py
backend/src/neoantigen/rag/: __init__.py  store.py
backend/src/neoantigen/report/: __init__.py  narrative.py  pdf_report.py
backend/src/neoantigen/security/: __init__.py  auth.py  redact.py
backend/src/neoantigen/web/: __init__.py  app.py  case_cache.py  sse.py  storage.py
backend/test_fixtures/: GROUND_TRUTH.json  README.md
frontend/: .env.example  CLAUDE.md  (+7 more)
(+254 files in other folders)
