[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoantigen"
version = "0.1.0"
description = "Personalized cancer vaccine pipeline — terminal backend"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
ml = ["mhcflurry>=2.1"]
agent = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "py3Dmol>=2.0",
    "networkx>=3.2",
]

[project.scripts]
neoantigen = "neoantigen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/neoantigen"]
