[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoantigen"
version = "0.1.0"
description = "Personalized cancer vaccine pipeline — terminal backend"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "mhcflurry>=2.1",
]

[project.optional-dependencies]
agent = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "py3Dmol>=2.0",
    "networkx>=3.2",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "lxml>=5.0",
]
prep = [
    "pandas>=2.0",
    "tqdm>=4.66",
]

[project.scripts]
neoantigen = "neoantigen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/neoantigen"]
