[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoantigen"
version = "0.2.0"
description = "Onkos - pathology PDF → NCCN railway → Kimi chat → oncologist report + trial-site map"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
agent = [
    "openai>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "reportlab>=4.2",
    "googlemaps>=4.10",
]
pdf-vision = [
    "pymupdf>=1.24",
    "pillow>=10.0",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "lxml>=5.0",
]

[project.scripts]
neoantigen = "neoantigen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/neoantigen"]
